--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
 	}
 
 	body{
-		background-color: #f7f2f2;
+		background-color: #f7eeee;
 		padding-top: 60px;
 	}
 
 	.content{
 		width: 70%;
-		background-color: white;
+		background-color: rgb(250, 244, 244);
 		display: block;
 		margin: 0 auto;
 		padding: 15px;
@@ -31,15 +31,15 @@
 		line-height: 25px;
 		text-align: center;
 		margin-right: 30px;
-		border: 2px solid gray;
-		background-color: white;
+		border: 2px solid rgb(205, 69, 69);
+		background-color: rgb(177, 159, 159);
 	}
 
 	.marker .marker-item .header{
 		float: left;
 		width: 100%;
 		height: auto;
-		background-color: #f6f6f6;
+		background-color: #ed9898;
 		font-size: 20px;
 		line-height: 40px;
 		text-align: center;
@@ -58,13 +58,19 @@
 	h1,
 	table{
 		margin-bottom: 30px;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
 	}
 
-	table,
-	table tr,
-	table tr td{
+	table,table tr, table tr td{
 		border-collapse: collapse;
 		border: 1px solid lightgray;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
 	}
 
 	table tr td{
@@ -74,18 +80,8 @@
 		text-align: center;
 	}
 
-	table tr td span{		
-		width: 50px;
-		height: 50px;
-		display: block;
-		border-radius: 50%;
-		line-height: 50px;
-		color: white;
-		font-size: 30px;
-	}
-
 	table tr td span.player-O{
-		background-color: #f6a400;
+		background-color: #7c5e21;
 	}
 
 	table tr td span.player-X{
@@ -108,4 +104,8 @@
 
 	div#result.visible{
 		display: inherit;
+	}
+
+	tr:hover{
+		cursor: pointer;
 	}
